--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
             <h1> Mi trabajo en TDA II </h1>
             <p>
-               Aquí te presentas y cuentas tus objetivos futuros tras el bachillerato.
+               Buenas me llamo Manuel y de mayor quiero ser el parroco de valdesoto.
             </p>
 
 
