--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                  <a href="ejercicios_p5js/AlvarezMartinez_Manuel_p5_4.html"> Link a AlvarezMartinez_Manuel_p5_4.html </a> <br> 
                  <a href="ejercicios_p5js/AlvarezMartinez_Manuel_p5_5.html">  Link a AlvarezMartinez_Manuel_p5_5.html </a> <br> 
                  <a href="ejercicios_p5js/AlvarezMartinez_Manuel_p5_6.html"> Link a AlvarezMartinez_Manuel_p5_6.html </a> <br>
-                 <a href="ejercicios_p5js/AlvarezMartinez_Manuel_p5_7.html"> Link a AlvarezMartinez_Manuel_p5_7.html </a> <br>
-                 <a href="ejercicios_p5js/AlvarezMartinez_Manuel_p5_8 (1).htm"> Link a AlvarezMartinez_Manuel_p5_8.html </a> <br>
-                  <a href="ejercicios_p5js/Sol-Tierra-Luna--AlvarezMartinez_Manuel_p5_9.html"> Link a AlvarezMartinez_Manuel_p5_9.html </a> <br> 
-                  <a href="ejercicios_p5js/Sol-Tierra-Luna--AlvarezMartinez_Manuel_p5_9.1.jpeg"> Link a AlvarezMartinez_Manuel_p5_9.1.html </a> <br>
+                 <a href="ejercicios_p5js/AlvarezMartinez_Manuel_p5_7.html"> Variables (Refuerzo)—AlvarezMartinez_Manuel_p5_7.html </a> <br>
+                 <a href="ejercicios_p5js/AlvarezMartinez_Manuel_p5_8 (1).htm"> Sistema Solar—AlvarezMartinez_Manuel_p5_8.html </a> <br>
+                  <a href="ejercicios_p5js/Sol-Tierra-Luna--AlvarezMartinez_Manuel_p5_9.html"> Sol–Tierra–Luna—AlvarezMartinez_Manuel_p5_9.html </a> <br> 
+                  <a href="ejercicios_p5js/Sol-Tierra-Luna--AlvarezMartinez_Manuel_p5_9.1.jpeg"> Sol–Tierra–Luna—AlvarezMartinez_Manuel_p5_9.1.html </a> <br>
             <p> <strong> Esta obra está bajo licencia </strong> <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1"> CC BY-NC-SA 4.0 </a> </p> 
         </body>
 </html>
